# filament-3

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile.hub  INSTALL.md  README.md  composer.json  docker-compose.chat.yml  docker-compose.hub.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.abrak/: manifest.yml  service-contract.yml
bootstrap/: app.php  providers.php
config/: abrak_navigation.php  app.php  content-cms.php  filamat-iam.php  filament-api-docs-builder.php  livewire.php  settings.php
docs/: 00-assumptions.md  01-audit.md  02-dependency-graph.mmd  03-architecture.md  04-erd.mmd  05-workflows.mmd  06-ui-relograde-v1.md  07-plugin-lifecycle.md  08-test-matrix.md  09-release-plan.md  99-release-checklist.md  AUTOPILOT-BACKLOG.md  AUTOPILOT-STATE.md  ImageResizerPortable.py  STATUS.md  delivery-notes.md  deployment-notes.md  docs-index.md  domains.md  erp-regression-checklist.md  final-docs-version.md  final-package.md  freeze-notice.md  qa-checklist-run.md  qa-checklist.md  regression-audit.md  release-checklist-audit.md  release-signoff.md  rollback-runbook.md  security-performance-review.md  staging-checklist.md  staging-runbook.md  tls.md
kyc_defense/: README.md  __init__.py  annotations.py  cli.py  datasets.py  doc_forensics.py  io.py  metrics.py  quality.py  recapture.py  reporting.py  scoring.py  selfie_forensics.py  testdata_generator.py
kyc_defense.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
lang/: fa.json
routes/: console.php  web.php
scripts/: chat_abrak_theme_apply.js  demo-e2e.sh  (+10 more)
(+654 files in other folders)
